fix(Stories): Fix story heading position on mobile
Fixes #94, Fixes #96

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -124,17 +124,6 @@ h6.subheader {
     }
 }
 
-.modal-header-caption {
-    @include orbit-caption;
-    // TODO: Add Media Queries for Small Screens
-    position: absolute;
-    top: 7%;
-    left: 0;
-    bottom: auto;
-    width: 35%;
-    margin-left: 4%;
-}
-
 /**
  * Setting slide position so they don't stack on load.
  */
